updated text on a few other places

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Ultra Deep Tech</title>
-  <meta content="Incorporating artificial intelligence and automated security solutions to help businesses be more valuable." name="description">
+  <meta content="Incorporating artificial intelligence and automated security solutions to help businesses increase ROI and reduce costs." name="description">
   <meta content="advanced technology, technological solutions, technological innovation, software development, artificial intelligence, big data, data analysis, automation, digital transformation, technological services, technology consulting, Ultradeeptech, business technology, IT solutions, cybersecurity, IoT, Internet of Things, machine learning, cloud computing" name="keywords">
 
   <!-- Favicons -->
@@ -46,9 +46,9 @@ class AnalyticsLoader {
             script.async = true;
             document.head.appendChild(script);
             
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
             gtag('config', 'G-LD1QMH1MRS', {
                 'send_page_view': true,
                 'anonymize_ip': true,
@@ -166,8 +166,8 @@ class AnalyticsLoader {
     </div>
   </header>
   
-
-
+  
+  
   <main class="main">
   
     <!-- Hero Section -->
@@ -180,7 +180,7 @@ class AnalyticsLoader {
           <div class="col-xl-7">
             <h1 data-aos="fade-up " id="typewriter-title"></h1>
             <blockquote data-aos="fade-up" data-aos-delay="100">
-              <p id="typewriter-drescription">Incorporating artificial intelligence and automated security solutions to help businesses be more valuable.</p>
+              <p id="typewriter-drescription">Incorporating artificial intelligence and automated security solutions to help businesses increase ROI and reduce costs.</p>
             </blockquote>
             <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
               <a href="#why-us" class="btn-get-started">Get Started</a>
@@ -216,7 +216,7 @@ class AnalyticsLoader {
                       el: '.swiper-pagination',
                       type: 'bullets',
                       clickable: true
-                    },
+                  },
                     navigation: {
                       nextEl: '.swiper-button-next',
                       prevEl: '.swiper-button-prev'
@@ -227,8 +227,8 @@ class AnalyticsLoader {
                       },
                       768: {
                         slidesPerView: 1
-                      }
-                    }
+                  }
+                }
                   });
                 });
               </script>
@@ -286,7 +286,7 @@ class AnalyticsLoader {
 
 
 
-    
+
     <section id="call-to-action" class="call-to-action section">
       <img src="/assets/img/hero-bg.webp" alt="Background image" width="1920" height="1080" loading="lazy">
 
@@ -298,7 +298,7 @@ class AnalyticsLoader {
               <h3>Protect Your AI From Modern Threats</h3>
               <h3>Discover  <b>Safety Shield Ultra</b></h3>
               <p>
-                Defend your conversational AI against prompt injection and data leaks.
+                Defend your conversational AI against prompt injection and data leaks. 
                 <br> 
                 See how Safety Shield Ultra keeps your AI interactions secure in real-time.
 
@@ -455,9 +455,9 @@ class AnalyticsLoader {
                 <div class="col-lg-4 col-md-6 features-item d-flex" data-aos="fade-up" data-aos-delay="200">
                   <a href="service-details.html?product=product-2"><div class="icon flex-shrink-0"><i class="bi bi-shield-lock" style="color: #2b5e96;"></i></div>
                   <div>
-                    <h4 class="title">Personalized Solutions for Medium, Big Companies, and Fortune 500
+                    <h4 class="title">Personalized Solutions for Big Companies and Fortune 500
                     </h4>
-                    <p class="description">Personalized solutions for medium, big companies, and Fortune 500, tailored to their specific needs to achieve business success.
+                    <p class="description">Personalized solutions for big companies, and Fortune 500, tailored to their specific needs to achieve business success.
                     </p>
 
                     <a href="service-details.html?product=product-2" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
@@ -487,16 +487,16 @@ class AnalyticsLoader {
 
     </section>
 
-    <section id="youtube-videos" class="youtube-videos section">
-      <div class="section-title">
-          <h2 style="margin-bottom: 0px; padding-bottom: 0px; color: aliceblue;">Our Latest YouTube Videos</h2>
+<section id="youtube-videos" class="youtube-videos section">
+  <div class="section-title">
+    <h2 style="margin-bottom: 0px; padding-bottom: 0px; color: aliceblue;">Our Latest YouTube Videos</h2>
           <h5 class="justify-content-center text-center" style="color: rgba(233, 233, 233, 0.4);">Discover the innovation driving tomorrow's technology today</h5>
-      </div>
-  
-      <div class="container">
+  </div>
+
+  <div class="container">
           <div id="youtube-container"></div>
       </div>
-  </section>
+</section>
 
 
 <div class="blog-cta text-center mt-4">
@@ -524,8 +524,7 @@ class AnalyticsLoader {
             <a href="index.html" class="logo d-flex align-items-center">
               <span class="sitename2">Ultra Deep Tech</span>
             </a>
-            <p>At Ultra Deep Tech, we offer AI consulting services and solutions that will help you reach your business goals faster. Our service also provides an increased focus on infusing data and enables clients to generate higher value from their digital transformation initiatives.
-              .</p>
+            <p>At Ultra Deep Tech, we offer AI strategic solutions that will help you increase ROI and reduce costs. Our service also provides an increased focus on infusing data and enables clients to generate higher value from their digital transformation initiatives.</p>
             <div class="social-links d-flex mt-4">
               <a href="https://www.instagram.com/ultradeeptech/" target="_blank"><i class="bi bi-instagram"></i></a>
               <a href="https://www.linkedin.com/company/ultra-deep-tech/" target="_blank"><i class="bi bi-linkedin"></i></a>
