--- a/safetyshield.html
+++ b/safetyshield.html
@@ -7,13 +7,13 @@
   <title>Safety Shield Ultra - Presentation</title>
 
 
-  <meta name="description" content="Safety Shield Ultra is an advanced AI-driven security platform designed to protect critical data for businesses of all sizes. It offers real-time threat detection, automated compliance management, and proactive risk mitigation. The platform utilizes cutting-edge artificial intelligence to continuously monitor data interactions, detect potential security breaches, automate compliance processes, and predict vulnerabilities before they become threats. Safety Shield Ultra integrates seamlessly with existing security infrastructure and includes features such as user behavior analytics, comprehensive risk assessment, and intelligent compliance management. With its scalable solutions and 24/7 support, Safety Shield Ultra provides robust protection against evolving cyber threats and ensures adherence to industry regulations.
+  <meta name="description" content="Safety Shield Ultra is a specialized security platform for conversational AI systems, protecting against prompt injection attacks and data leaks. Our platform provides real-time monitoring of AI interactions, privacy compliance, and comprehensive threat prevention for chatbots and AI assistants. Features include prompt injection defense, PII protection, response monitoring, and access control. Whether you're running a single chatbot or enterprise-wide AI systems, Safety Shield Ultra ensures your AI conversations remain secure and compliant.
 ">
-  <meta name="keywords" content="AI-driven security, data protection, threat detection, compliance automation, risk mitigation, cybersecurity, user behavior analytics, artificial intelligence, data security, regulatory compliance, insider threat prevention, security analytics, enterprise security, cloud security, advanced threat intelligence, risk assessment, security automation, data privacy, cyber threat protection, security infrastructure">
+<meta name="keywords" content="AI security, prompt injection prevention, conversational AI protection, chatbot security, AI privacy compliance, PII protection, AI response monitoring, AI access control, LLM security, AI data protection, conversation security, AI threat detection, prompt security, AI compliance, chatbot protection, AI risk management, AI privacy, AI threat prevention, secure AI interactions, AI security platform">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.webp" rel="icon">
-  <link href="assets/img/favicon.webp" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/favicon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -160,63 +160,63 @@
       </div>
     </section><!-- /Hero Section -->
 
-    
-<!-- About Section -->
-<section id="about" class="about section">
-  <div class="background-image"></div>
-  <div class="container about-content" data-aos="fade-up" data-aos-delay="100">
-    <div class="row align-items-xl-center gy-5">
-      <div class="col-lg-5 content">
-        <div class="image-container">
+
+    <!-- About Section -->
+    <section id="about" class="about section">
+      <div class="background-image"></div>
+      <div class="container about-content" data-aos="fade-up" data-aos-delay="100">
+        <div class="row align-items-xl-center gy-5">
+          <div class="col-lg-5 content">
+            <div class="image-container">
           <img src="assets/img/notebookdash.webp" alt="" class="notebookdash">
           <img src="assets/img/celudash.webp" alt="" class="celudash">
-        </div>
-        <h4>Discover Safety Shield Ultra</h4>
-        <h2>Complete Protection for Conversational AI Systems</h2>
-        <p>Safety Shield Ultra provides comprehensive security for your AI chatbots and virtual assistants. Monitor interactions, prevent unauthorized access, and ensure data privacy in real-time.</p>
-        <div class="d-flex gap-3">
-          <a href="#featured" class="read-more"><span>See more</span><i class="bi bi-arrow-right"></i></a>
-          <a href="#" class="read-more request-demo-btn" id="aboutRequestDemoBtn">
-            <i class="bi bi-rocket-takeoff"></i>
-            <span>Request a demo</span>
-          </a>
+            </div>
+            <h4>Discover Safety Shield Ultra</h4>
+            <h2>Complete Protection for Conversational AI Systems</h2>
+            <p>Safety Shield Ultra provides comprehensive security for your AI chatbots and virtual assistants. Monitor interactions, prevent unauthorized access, and ensure data privacy in real-time.</p>
+            <div class="d-flex gap-3">
+              <a href="#featured" class="read-more"><span>See more</span><i class="bi bi-arrow-right"></i></a>
+              <a href="#" class="read-more request-demo-btn" id="aboutRequestDemoBtn">
+                <i class="bi bi-rocket-takeoff"></i>
+                <span>Request a demo</span>
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-7">
+            <div class="row gy-4 icon-boxes">
+              <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
+                <div class="icon-box">
+                  <i class="bi bi-shield-lock"></i>
+                  <h3>Prompt Injection Defense</h3>
+                  <p>Prevents malicious prompts and unauthorized commands in real-time.</p>
+                </div>
+              </div>
+              <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
+                <div class="icon-box">
+                  <i class="bi bi-file-earmark-lock"></i>
+                  <h3>Data Privacy Control</h3>
+                  <p>Protects sensitive information and prevents unauthorized data exposure.</p>
+                </div>
+              </div>
+              <div class="col-md-6" data-aos="fade-up" data-aos-delay="400">
+                <div class="icon-box">
+                  <i class="bi bi-bell"></i>
+                  <h3>Response Monitoring</h3>
+                  <p>Analyzes AI responses for safety and compliance in real-time.</p>
+                </div>
+              </div>
+              <div class="col-md-6" data-aos="fade-up" data-aos-delay="500">
+                <div class="icon-box">
+                  <i class="bi bi-graph-up-arrow"></i>
+                  <h3>Security Analytics</h3>
+                  <p>Tracks and visualizes security metrics across all AI conversations.</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="col-lg-7">
-        <div class="row gy-4 icon-boxes">
-          <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon-box">
-              <i class="bi bi-shield-lock"></i>
-              <h3>Prompt Injection Defense</h3>
-              <p>Prevents malicious prompts and unauthorized commands in real-time.</p>
-            </div>
-          </div>
-          <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon-box">
-              <i class="bi bi-file-earmark-lock"></i>
-              <h3>Data Privacy Control</h3>
-              <p>Protects sensitive information and prevents unauthorized data exposure.</p>
-            </div>
-          </div>
-          <div class="col-md-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon-box">
-              <i class="bi bi-bell"></i>
-              <h3>Response Monitoring</h3>
-              <p>Analyzes AI responses for safety and compliance in real-time.</p>
-            </div>
-          </div>
-          <div class="col-md-6" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon-box">
-              <i class="bi bi-graph-up-arrow"></i>
-              <h3>Security Analytics</h3>
-              <p>Tracks and visualizes security metrics across all AI conversations.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+    </section>
 
     <!-- Featured Section -->
     <section id="featured" class="featured section">
@@ -270,85 +270,85 @@
       </div>
     </section><!-- /Featured Section -->
 
-<!-- Features Section -->
-<section id="features" class="features section">
-  <div class="container section-title" data-aos="fade-up">
+    <!-- Features Section -->
+    <section id="features" class="features section">
+      <div class="container section-title" data-aos="fade-up">
     <h2>Key Capabilities    </h2>
-    <p>Comprehensive security features designed specifically for conversational AI systems.</p>
-  </div>
-  <div class="container">
-    <!-- Advanced Threat Detection -->
-    <div class="row gy-4 align-items-center features-item">
-      <div class="col-md-5 d-flex align-items-center justify-content-center" data-aos="zoom-out" data-aos-delay="100">
-        <div class="icon-container">
-          <i class="bi bi-shield-check"></i>
-        </div>
+        <p>Comprehensive security features designed specifically for conversational AI systems.</p>
       </div>
-      <div class="col-md-7" data-aos="fade-up" data-aos-delay="100">
+      <div class="container">
+    <!-- Advanced Threat Detection -->
+        <div class="row gy-4 align-items-center features-item">
+          <div class="col-md-5 d-flex align-items-center justify-content-center" data-aos="zoom-out" data-aos-delay="100">
+            <div class="icon-container">
+              <i class="bi bi-shield-check"></i>
+            </div>
+          </div>
+          <div class="col-md-7" data-aos="fade-up" data-aos-delay="100">
         <h3>Conversation Security
         </h3>
-        <p class="fst-italic">
+            <p class="fst-italic">
           Protect all AI interactions with advanced security monitoring.</p>
-        <ul>
-          <li><i class="bi bi-check"></i><span>Real-time prompt injection detection and prevention.</span></li>
-          <li><i class="bi bi-check"></i><span>Automatic blocking of unauthorized access attempts.</span></li>
-          <li><i class="bi bi-check"></i><span>Continuous monitoring of AI responses for safety.</span></li>
-        </ul>
-      </div>
-    </div>
+            <ul>
+              <li><i class="bi bi-check"></i><span>Real-time prompt injection detection and prevention.</span></li>
+              <li><i class="bi bi-check"></i><span>Automatic blocking of unauthorized access attempts.</span></li>
+              <li><i class="bi bi-check"></i><span>Continuous monitoring of AI responses for safety.</span></li>
+            </ul>
+          </div>
+        </div>
 
     <!-- Intelligent Compliance Management -->
-    <div class="row gy-4 align-items-center features-item">
-      <div class="col-md-5 order-1 order-md-2 d-flex align-items-center justify-content-center" data-aos="zoom-out" data-aos-delay="200">
-        <div class="icon-container">
-          <i class="bi bi-clipboard-check"></i>
-        </div>
-      </div>
-      <div class="col-md-7 order-2 order-md-1" data-aos="fade-up" data-aos-delay="200">
-        <h3>Privacy Protection</h3>
-        <p class="fst-italic">
+        <div class="row gy-4 align-items-center features-item">
+          <div class="col-md-5 order-1 order-md-2 d-flex align-items-center justify-content-center" data-aos="zoom-out" data-aos-delay="200">
+            <div class="icon-container">
+              <i class="bi bi-clipboard-check"></i>
+            </div>
+          </div>
+          <div class="col-md-7 order-2 order-md-1" data-aos="fade-up" data-aos-delay="200">
+            <h3>Privacy Protection</h3>
+            <p class="fst-italic">
           Ensure data privacy in all AI conversations.</p>
-        <p>
+            <p>
           Protect sensitive information with automated PII detection, data masking, and privacy compliance monitoring.</p>
-      </div>
-    </div>
+          </div>
+        </div>
 
     <!-- Comprehensive Risk Assessment -->
-    <div class="row gy-4 align-items-center features-item">
-      <div class="col-md-5 d-flex align-items-center justify-content-center" data-aos="zoom-out">
-        <div class="icon-container">
-          <i class="bi bi-graph-up"></i>
-        </div>
-      </div>
-      <div class="col-md-7" data-aos="fade-up">
+        <div class="row gy-4 align-items-center features-item">
+          <div class="col-md-5 d-flex align-items-center justify-content-center" data-aos="zoom-out">
+            <div class="icon-container">
+              <i class="bi bi-graph-up"></i>
+            </div>
+          </div>
+          <div class="col-md-7" data-aos="fade-up">
         <h3>Security Analytics
         </h3>
-        <p>
+            <p>
           Comprehensive insights into your AI system's security status.</p>
-        <ul>
-          <li><i class="bi bi-check"></i><span>Detailed security metrics and threat analytics.</span></li>
-          <li><i class="bi bi-check"></i><span>Risk assessment and trend analysis.</span></li>
-          <li><i class="bi bi-check"></i><span>Custom security reporting and alerts.</span></li>
-        </ul>
-      </div>
-    </div>
+            <ul>
+              <li><i class="bi bi-check"></i><span>Detailed security metrics and threat analytics.</span></li>
+              <li><i class="bi bi-check"></i><span>Risk assessment and trend analysis.</span></li>
+              <li><i class="bi bi-check"></i><span>Custom security reporting and alerts.</span></li>
+            </ul>
+          </div>
+        </div>
 
     <!-- User Behavior Analytics -->
-    <div class="row gy-4 align-items-center features-item">
-      <div class="col-md-5 order-1 order-md-2 d-flex align-items-center justify-content-center" data-aos="zoom-out">
-        <div class="icon-container">
-          <i class="bi bi-people"></i>
+        <div class="row gy-4 align-items-center features-item">
+          <div class="col-md-5 order-1 order-md-2 d-flex align-items-center justify-content-center" data-aos="zoom-out">
+            <div class="icon-container">
+              <i class="bi bi-people"></i>
+            </div>
+          </div>
+          <div class="col-md-7 order-2 order-md-1" data-aos="fade-up">
+            <h3>Access Control</h3>
+            <p class="fst-italic">
+          Manage and monitor AI system access securely.</p>
+            <p>
+          Control who can access your AI systems with role-based permissions, authentication, and detailed access logs. </p>
+          </div>
         </div>
       </div>
-      <div class="col-md-7 order-2 order-md-1" data-aos="fade-up">
-        <h3>Access Control</h3>
-        <p class="fst-italic">
-          Manage and monitor AI system access securely.</p>
-        <p>
-          Control who can access your AI systems with role-based permissions, authentication, and detailed access logs. </p>
-      </div>
-    </div>
-  </div>
 </section><!-- /Features Section -->
 
 <section id="cta-features" class="cta-features-section">
@@ -368,7 +368,7 @@
   </div>
 </section>
 
-<!-- FAQ Section -->
+   <!-- FAQ Section -->
 <section id="faq" class="faq section">
   <div class="container section-title" data-aos="fade-up">
     <h2>Frequently Asked Questions</h2>
@@ -399,7 +399,7 @@
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqAccordion">
               <div class="accordion-body">
-                Our platform provides comprehensive protection through real-time monitoring, threat detection, and advanced security measures. It safeguards your AI systems against unauthorized access and potential vulnerabilities.
+                Our platform provides comprehensive protection through real-time prompt injection detection, PII data masking, response monitoring, and access control. It continuously analyzes AI conversations to prevent security breaches and ensure compliance.
               </div>
             </div>
           </div>
@@ -523,8 +523,7 @@
             <a href="index.html" class="logo d-flex align-items-center">
               <span class="sitename2">Ultra Deep Tech</span>
             </a>
-            <p>At Ultra Deep Tech, we offer AI consulting services and solutions that will help you reach your business goals faster. Our service also provides an increased focus on infusing data and enables clients to generate higher value from their digital transformation initiatives.
-              .</p>
+            <p>At Ultra Deep Tech, we offer AI strategic solutions that will help you increase ROI and reduce costs. Our service also provides an increased focus on infusing data and enables clients to generate higher value from their digital transformation initiatives.</p>
             <div class="social-links d-flex mt-4">
               <a href="https://www.instagram.com/ultradeeptech/" target="_blank"><i class="bi bi-instagram"></i></a>
               <a href="https://www.linkedin.com/company/ultra-deep-tech/" target="_blank"><i class="bi bi-linkedin"></i></a>
