--- a/service-details.html
+++ b/service-details.html
@@ -157,7 +157,7 @@
               <h4>Service List</h4>
               <div class="product-list">
                 <a href="#product-1" id="product-1-link" data-aos="product-1-link"><i class="bi bi-arrow-right-circle"></i> AI and Data Engineering Consulting<span></span></a>
-                <a href="#product-2" id="product-2-link"><i class="bi bi-arrow-right-circle"></i> Personalized Solution for Medium, Big Companies, and Fortune 500<span></span></a>
+                <a href="#product-2" id="product-2-link"><i class="bi bi-arrow-right-circle"></i> Personalized Solution for Big Companies, and Fortune 500<span></span></a>
               </div>
             </div><!-- End Products List -->
 
@@ -181,7 +181,7 @@
                       <b>Continuous Innovation:</b> It's not just about solving current problems but anticipating and preparing for the future. We leverage the latest AI and Data Engineering technologies to predict trends, identify opportunities, and keep you consistently ahead of the competition.<br><br>
                   <b>Efficiency and Cost-effectiveness:</b> Our solutions not only enhance operational efficiency but also optimize costs. From process automation to error reduction, every aspect of our work is geared towards maximizing your return on investment.    <br><br>
 
-              <p><b>Personalized Solution for Medium, Big Companies, and Fortune 500:</b></p>
+              <p><b>Personalized Solution for Big Companies, and Fortune 500:</b></p>
               
                   At the heart of our success lies the ability to tailor our services to meet the unique needs of each client. We understand that every company faces specific challenges and harbors ambitious goals. That's why we offer customized solutions that perfectly align with your strategic and operational objectives.
                   Our personalized approach includes:<br><br>
@@ -262,8 +262,7 @@
             <a href="index.html" class="logo d-flex align-items-center">
               <span class="sitename2">Ultra Deep Tech</span>
             </a>
-            <p>At Ultra Deep Tech, we offer AI consulting services and solutions that will help you reach your business goals faster. Our service also provides an increased focus on infusing data and enables clients to generate higher value from their digital transformation initiatives.
-              .</p>
+            <p>At Ultra Deep Tech, we offer AI strategic solutions that will help you increase ROI and reduce costs. Our service also provides an increased focus on infusing data and enables clients to generate higher value from their digital transformation initiatives.</p>
             <div class="social-links d-flex mt-4">
               <a href="https://www.instagram.com/ultradeeptech/" target="_blank"><i class="bi bi-instagram"></i></a>
               <a href="https://www.linkedin.com/company/ultra-deep-tech/" target="_blank"><i class="bi bi-linkedin"></i></a>
@@ -363,8 +362,8 @@
           productImg.src = 'assets/img/blog/blog-1.jpg';
         } else if (productId === 'product-2') {
           productContent.innerHTML = `
-            <h3>Personalized Solution for Medium, Big Companies, and Fortune 500</h3>
-            <p>Tailored to meet the unique needs of medium to Fortune 500 companies, our Personalized Solutions offer bespoke strategic consultancy and expert support. We collaborate closely with your team to develop customized strategies and solutions that not only solve current challenges but also pave the way for future growth. Benefit from our deep expertise in AI and Data Engineering across diverse industries, ensuring world-class support and strategic guidance throughout your journey.</p>`;
+            <h3>Personalized Solution for Big Companies, and Fortune 500</h3>
+            <p>Tailored to meet the unique needs of big to Fortune 500 companies, our Personalized Solutions offer bespoke strategic consultancy and expert support. We collaborate closely with your team to develop customized strategies and solutions that not only solve current challenges but also pave the way for future growth. Benefit from our deep expertise in AI and Data Engineering across diverse industries, ensuring world-class support and strategic guidance throughout your journey.</p>`;
           productImg.src = 'assets/img/blog/blog-3.jpg';
         } else if (productId === 'product-3') {
           productContent.innerHTML = `
