--- a/politics.html
+++ b/politics.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Ultra Deep Tech</title>
-  <meta content="Incorporating intelligent automated solutions to help new businesses be more valuable." name="description">
+  <meta content="Incorporating intelligent automated solutions to help businesses increase ROI and reduce costs." name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
@@ -355,8 +355,7 @@ If you have any questions about our Cookie Policy, please contact us via contact
             <a href="index.html" class="logo d-flex align-items-center">
               <span class="sitename2">Ultra Deep Tech</span>
             </a>
-            <p>At Ultra Deep Tech, we offer AI consulting services and solutions that will help you reach your business goals faster. Our service also provides an increased focus on infusing data and enables clients to generate higher value from their digital transformation initiatives.
-              .</p>
+            <p>At Ultra Deep Tech, we offer AI strategic solutions that will help you increase ROI and reduce costs. Our service also provides an increased focus on infusing data and enables clients to generate higher value from their digital transformation initiatives.</p>
             <div class="social-links d-flex mt-4">
               <a href="https://www.instagram.com/ultradeeptech/" target="_blank"><i class="bi bi-instagram"></i></a>
               <a href="https://www.linkedin.com/company/ultra-deep-tech/" target="_blank"><i class="bi bi-linkedin"></i></a>
