corrected the button that wasn't working "See it in action" on product page

--- a/productsdetails.html
+++ b/productsdetails.html
@@ -429,7 +429,15 @@
 </a>
   
 
-    
+<div id="videoModal" class="modal">
+  <div class="modal-content"> 
+    <span class="close">&times; </span> 
+    <video id="videoPlayer" width="100%" controls>
+      <source src="assets/video/demostracion español.mp4" type="video/mp4">
+      Tu navegador no soporta el tag de video.
+    </video>
+  </div>
+</div>
 
 </body>
 
