--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
               <li><a href="about.html#values-ethics" class="nav-link"><i class="bi bi-heart-fill"></i><span>Values and Ethics</span></a></li>
               <li><a href="about.html#csr" class="nav-link"><i class="bi bi-globe"></i><span>Corporate Social Responsibility (CSR)</span></a></li>
               <li><a href="index.html#youtube-videos" class="nav-link"><i class="bi bi-youtube"></i><span>Youtube Channel</span></a></li>
-                  <li><a href="/blog.html" class="nav-link"><i class="bi bi-pencil-fill"></i><span>Blog & Social Media</span></a></li>
+              <li><a href="/blog.html" class="nav-link"><i class="bi bi-pencil-fill"></i><span>Blog & Social Media</span></a></li>
             </ul>
           </li>
   
@@ -75,6 +75,7 @@
             </a>
             <ul>
               <li><a href="safetyshield.html" class="nav-link "><img src="/assets/img/favicon_copia.webp" class="logo-header"></img><span>Safety Shield Ultra</span></a></li>
+              <li><a href="ccommerce.html" class="nav-link "><img src="/assets/img/faviconc.png" class="logo-header2"></img><span>C-Commerce Ultra</span></a></li>
               <li><a href="productsdetails.html?product=product-1" class="nav-link"><i class="bi bi-bar-chart-fill"></i><span>Interpretability</span></a></li>
               <li><a href="productsdetails.html?product=product-2" class="nav-link"><i class="bi bi-shield-lock-fill"></i><span>Anonymization</span></a></li>
               <li><a href="productsdetails.html?product=product-3" class="nav-link"><i class="bi bi-arrow-up-right-square-fill"></i><span>Compression</span></a></li>
