--- a/career.html
+++ b/career.html
@@ -76,6 +76,7 @@
             </a>
             <ul>
               <li><a href="safetyshield.html" class="nav-link "><img src="/assets/img/favicon_copia.webp" class="logo-header"></img><span>Safety Shield Ultra</span></a></li>
+              <li><a href="ccommerce.html" class="nav-link "><img src="/assets/img/faviconc.png" class="logo-header2"></img><span>C-Commerce Ultra</span></a></li>
               <li><a href="productsdetails.html?product=product-1" class="nav-link"><i class="bi bi-bar-chart-fill"></i><span>Interpretability</span></a></li>
               <li><a href="productsdetails.html?product=product-2" class="nav-link"><i class="bi bi-shield-lock-fill"></i><span>Anonymization</span></a></li>
               <li><a href="productsdetails.html?product=product-3" class="nav-link"><i class="bi bi-arrow-up-right-square-fill"></i><span>Compression</span></a></li>
@@ -107,8 +108,7 @@
             </a>
             <ul>
               <li><a href="career.html#openings" class="nav-link"><i class="bi bi-person-fill"></i><span>Current Job Openings</span></a></li>
-              <li><a href="career.html#" class="nav-link"><i class="bi bi-stars"></i><span>Core 
-                Recruiting Values</span></a></li>
+              <li><a href="career.html#" class="nav-link"><i class="bi bi-stars"></i><span>Core Values</span></a></li>
             </ul>
           </li>
   
