--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@ class AnalyticsLoader {
             </a>
             <ul>
               <li><a href="safetyshield.html" class="nav-link "><img src="/assets/img/favicon_copia.webp" class="logo-header"></img><span>Safety Shield Ultra</span></a></li>
+              <li><a href="ccommerce.html" class="nav-link "><img src="/assets/img/faviconc.png" class="logo-header2"></img><span>C-Commerce Ultra</span></a></li>
               <li><a href="productsdetails.html?product=product-1" class="nav-link"><i class="bi bi-bar-chart-fill"></i><span>Interpretability</span></a></li>
               <li><a href="productsdetails.html?product=product-2" class="nav-link"><i class="bi bi-shield-lock-fill"></i><span>Anonymization</span></a></li>
               <li><a href="productsdetails.html?product=product-3" class="nav-link"><i class="bi bi-arrow-up-right-square-fill"></i><span>Compression</span></a></li>
@@ -636,11 +637,7 @@ class AnalyticsLoader {
     });
 </script>
 
-  <a href="https://wa.link/2ebre2" class="whatsapp-float" target="_blank" data-aos="fade-up">
-    <i class="bi bi-whatsapp whatsapp-icon"></i>
-    <span class="tooltip-text">Have a Question? Write Us</span>
 
-</a>
 
 
 <div id="videoModal" class="modal">
@@ -653,6 +650,20 @@ class AnalyticsLoader {
   </div>
 </div>
 
+
+<script>
+  window.ultraDeepConfig = {
+    apiKey: 'TU-API-KEY',
+    apiUrl: 'https://back-webchat-934866038204.us-central1.run.app/api',
+    primaryColor: '#2563eb',
+    position: 'right',
+    botName: 'UltraDeep Assistant',
+    // ... otras opciones de configuración
+  };
+</script>
+
+<!-- Script del widget -->
+<script src="https://bot.ultradeep.tech/widget-loader.js" async></script>
 
 
 </body>
