--- a/safetyshield.html
+++ b/safetyshield.html
@@ -71,20 +71,12 @@
             </a>
             <ul>
               <li><a href="safetyshield.html" class="nav-link "><img src="/assets/img/favicon_copia.webp" class="logo-header"></img><span>Safety Shield Ultra</span></a></li>
+              <li><a href="ccommerce.html" class="nav-link "><img src="/assets/img/faviconc.png" class="logo-header2"></img><span>C-Commerce Ultra</span></a></li>
               <li><a href="productsdetails.html?product=product-1" class="nav-link"><i class="bi bi-bar-chart-fill"></i><span>Interpretability</span></a></li>
               <li><a href="productsdetails.html?product=product-2" class="nav-link"><i class="bi bi-shield-lock-fill"></i><span>Anonymization</span></a></li>
               <li><a href="productsdetails.html?product=product-3" class="nav-link"><i class="bi bi-arrow-up-right-square-fill"></i><span>Compression</span></a></li>
               <li><a href="productsdetails.html?product=product-4" class="nav-link"><i class="bi bi-bar-chart-line-fill"></i><span>Benchmarking</span></a></li>
-              <li class="dropdown-submenu">
-                <a href="productsdetails.html?product=product-5" class="nav-link">
-                  <i class="bi bi-shield-fill"></i><span>GenAI Safety</span>
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a href="productsdetails.html?product=product-5&subproduct=1" class="nav-link"><i class="bi bi-check-circle"></i><span>Ethical AI Framework</span></a></li>
-                  <li><a href="productsdetails.html?product=product-5&subproduct=2" class="nav-link"><i class="bi bi-shield-shaded"></i><span>Bias Detection</span></a></li>
-                  <li><a href="productsdetails.html?product=product-5&subproduct=3" class="nav-link"><i class="bi bi-eye-slash"></i><span>Privacy Preservation</span></a></li>
-                </ul>
-              </li>
+              <li><a href="productsdetails.html?product=product-5" class="nav-link"><i class="bi bi-shield-fill"></i><span>GenAI Safety</span></a></li>
               <li><a href="productsdetails.html?product=product-6" class="nav-link"><i class="bi bi-lock-fill"></i><span>Evolving Threat Management</span></a></li>
               <li><a href="productsdetails.html?product=product-7" class="nav-link"><i class="bi bi-shield-check"></i><span>Algorithmic Protection</span></a></li>
             </ul>
