--- a/index.html
+++ b/index.html
@@ -552,6 +552,7 @@ class AnalyticsLoader {
             <h4>Products & Solution</h4>
             <ul>
               <li><a href="safetyshield.html" class="nav-link "><span>Safety Shield Ultra</span></a></li>
+              <li><a href="ccommerce.html" class="nav-link "><span>C-Commerce Ultra</span></a></li>
               <li><a href="productsdetails.html?product=product-1">Interpretability</a></li>
               <li><a href="productsdetails.html?product=product-2">Anonymization</a></li>
               <li><a href="productsdetails.html?product=product-3">Compression</a></li>
@@ -651,19 +652,11 @@ class AnalyticsLoader {
 </div>
 
 
-<script>
-  window.ultraDeepConfig = {
-    apiKey: 'TU-API-KEY',
-    apiUrl: 'https://back-webchat-934866038204.us-central1.run.app/api',
-    primaryColor: '#2563eb',
-    position: 'right',
-    botName: 'UltraDeep Assistant',
-    // ... otras opciones de configuración
-  };
-</script>
+<a href="https://wa.link/2ebre2" class="whatsapp-float" target="_blank" data-aos="fade-up">
+  <i class="bi bi-whatsapp whatsapp-icon"></i>
+  <span class="tooltip-text">Have a Question? Write Us</span>
 
-<!-- Script del widget -->
-<script src="https://bot.ultradeep.tech/widget-loader.js" async></script>
+</a>
 
 
 </body>
