--- a/about.html
+++ b/about.html
@@ -424,6 +424,7 @@
             <h4>Products & Solution</h4>
             <ul>
               <li><a href="safetyshield.html" class="nav-link "><span>Safety Shield Ultra</span></a></li>
+              <li><a href="ccommerce.html" class="nav-link "><span>C-Commerce Ultra</span></a></li>
               <li><a href="productsdetails.html?product=product-1">Interpretability</a></li>
               <li><a href="productsdetails.html?product=product-2">Anonymization</a></li>
               <li><a href="productsdetails.html?product=product-3">Compression</a></li>
