--- a/politics.html
+++ b/politics.html
@@ -383,6 +383,7 @@ If you have any questions about our Cookie Policy, please contact us via contact
             <h4>Products & Solution</h4>
             <ul>
               <li><a href="safetyshield.html" class="nav-link "><img src="/assets/img/favicon_copia.webp" class="logo-header"></img><span>Safety Shield Ultra</span></a></li>
+              <li><a href="ccommerce.html" class="nav-link "><span>C-Commerce Ultra</span></a></li>
               <li><a href="productsdetails.html?product=product-1">Interpretability</a></li>
               <li><a href="productsdetails.html?product=product-2">Anonymization</a></li>
               <li><a href="productsdetails.html?product=product-3">Compression</a></li>
